--- a/figma/style.css
+++ b/figma/style.css
@@ -17,7 +17,6 @@ font-weight: 700;
 font-size: 55px;
 line-height: 101.38%;
 color: #000000;
-
 }
 .text{
     position: absolute;
@@ -56,7 +55,6 @@ left: 950px;
 top: 511px;
 border-radius: 50%;
 background: #EFEFEF;
-
 }
 .sol{
 position: absolute;
@@ -64,14 +62,12 @@ width: 150px;
 height: 39px;
 left: 488px;
 top: 740px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
 font-size: 25px;
 line-height: 130%;
 color: #000000;
-
 }
 .solalt{
     position: absolute;
@@ -79,7 +75,6 @@ width: 150px;
 height: 39px;
 left: 488px;
 top: 780px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -93,14 +88,12 @@ width: 150px;
 height: 39px;
 left: 733px;
 top: 740px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
 font-size: 25px;
 line-height: 130%;
 color: #000000;
-
 }
 .sagalt{
     position: absolute;
@@ -108,14 +101,12 @@ width: 150px;
 height: 39px;
 left: 733px;
 top: 780px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
 line-height: 130%;
 color: #000000;
-
 }
 .son{
     position: absolute;
@@ -129,7 +120,6 @@ font-weight: 700;
 font-size: 25px;
 line-height: 130%;
 color: #000000;
-
 }
 .sonalt{
     position: absolute;
@@ -143,7 +133,6 @@ font-weight: 400;
 font-size: 18px;
 line-height: 130%;
 color: #000000;
-
 }
 .ellipseiki{
         position: absolute;
@@ -153,8 +142,6 @@ color: #000000;
     top: 857px;
     border-radius: 50%;
     background: #EFEFEF;}
-
-
 @media only screen and (min-width: 375px) and (max-width:830px) {
     .umumi{width: 100%;}
     h1{
@@ -163,7 +150,6 @@ width: 170.08px;
 height: 43.34px;
 left: 36px;
 top: 56px;
-
 font-family: 'Roboto Slab';
 font-style: normal;
 font-weight: 700;
@@ -175,7 +161,6 @@ width: 308.47px;
 height: 174.27px;
 left: 36px;
 top: 107.72px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -187,8 +172,6 @@ font-size: 12px;
     height: 160.29px;
     left: 101px;
     top: 338px;
-    
-    
 }
 .ellipse{
     position: absolute;
@@ -203,7 +186,6 @@ background: #EFEFEF;
     height: 18.17px;
     left: 35px;
     top: 544px;
-    
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -215,7 +197,6 @@ width: 86px;
 height: 18px;
 left: 35px;
 top: 563px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -226,7 +207,6 @@ font-size: 10px;
     height: 18.17px;
     left: 154.16px;
     top: 544px;
-    
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -237,7 +217,6 @@ font-size: 10px;
         height: 18.5px;
         left: 154.33px;
         top: 562.46px;
-        
         font-family: 'Roboto';
         font-style: normal;
         font-weight: 400;
@@ -248,12 +227,10 @@ font-size: 10px;
     height: 18.17px;
     left: 35px;
     top: 615px;
-    
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
-
 }
 .sonalt{
     position: absolute;
@@ -261,7 +238,6 @@ width: 76px;
 height: 18px;
 left: 35px;
 top: 634px;
-
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -269,12 +245,8 @@ font-size: 10px;
 }
 .second{display: none;}
 .ellipseiki{display: none;}
-
-
 }
-
 @media only screen and (min-width: 830px) and (max-width:1400px) {
-   
  .umumi{width: 100%}
  h1{
      position: absolute;
@@ -282,12 +254,10 @@ font-size: 10px;
      height: 53.86px;
      left: 72px;
      top: 56px;
-     
      font-family: 'Roboto Slab';
      font-style: normal;
      font-weight: 700;
-     font-size: 32px;
- }
+     font-size: 32px; }
 .text{
  position: absolute;
  width: 383.41px;
@@ -363,7 +333,6 @@ font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
 font-size: 15px;
-
 }
 .sonalt{position: absolute;
  width: 86.88px;
@@ -374,7 +343,6 @@ font-size: 15px;
 font-style: normal;
 font-weight: 400;
 font-size: 11px;
-
 }
 .ellipse{
  position: absolute;
